# tudat-bundle

./: .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  commit-msg.txt  environment.yaml  install.py  main.py
.circleci/: config.yml
.github/workflows/: dev_setup_poc_150.yml
cmake/: FindEigen3.cmake
cmake_modules/: FindEigen3.cmake
docs/source/: interface.rst  json.rst  sofa.rst  spice.rst
independent_test/: CMakeLists.txt  test.cpp
install_test/: CMakeLists.txt
install_test/examples/: CMakeLists.txt
install_test/examples/tudat/satellite_propagation/: CMakeLists.txt
pybind11/include/pybind11/: cast.h  pybind11.h
tools/: circleci_bionic_clang6_release.sh  circleci_bionic_gcc7_coverage.sh  circleci_macosx_xcode_11_release.sh  conda_build_all.sh
